force-app/main/default/objects/ErrorLog__c/fields/AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInfo__c</fullName>
    <description>Additional info about the error, record details, or JSON payload</description>
    <inlineHelpText>Additional info about the error, record details, or JSON payload</inlineHelpText>
    <label>Additional Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>