force-app/main/default/objects/ErrorLog__c/fields/ErrorDate__c.field-meta.xml
<CustomField>
    <fullName>ErrorDate__c</fullName>
    <description>Date/Time where the error occurred</description>
    <inlineHelpText>Date/Time where the error occurred</inlineHelpText>
    <label>Error Date</label>
    <type>DateTime</type>
</CustomField>