force-app/main/default/objects/ErrorLog__c/fields/ErrorLink__c.field-meta.xml
<CustomField>
    <fullName>ErrorLink__c</fullName>
    <description>Link to the record related to this error record</description>
    <formula>HYPERLINK(&quot;/&quot; +  RecordId__c,  &quot;Go To Record&quot;, &quot;_top&quot;)</formula>
    <inlineHelpText>Link to the record related to this error record</inlineHelpText>
    <label>Error Link</label>
    <type>Text</type>
</CustomField>