force-app/main/default/objects/ErrorLog__c/fields/LongMessage__c.field-meta.xml
<CustomField>
    <fullName>LongMessage__c</fullName>
    <description>Error Message with all the details</description>
    <inlineHelpText>Error Message with all the details</inlineHelpText>
    <label>Long Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>