force-app/main/default/objects/ErrorLog__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Action or Code Area that led to the error</description>
    <inlineHelpText>Action or Code Area that led to the error</inlineHelpText>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>