force-app/main/default/objects/ErrorLog__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Identifying Info of the Record (if any) that threw this error. May not be an id if it&apos;s an insert call</description>
    <inlineHelpText>Identifying Info of the Record (if any) that threw this error. May not be an id if it&apos;s an insert call</inlineHelpText>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>