force-app/main/default/objects/ErrorLog__c/fields/ShortMessage__c.field-meta.xml
<CustomField>
    <fullName>ShortMessage__c</fullName>
    <description>Short Title of the Error</description>
    <inlineHelpText>Short Title of the Error</inlineHelpText>
    <label>Short Message</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>