force-app/main/default/objects/ErrorLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ShortMessage__c</columns>
    <columns>ErrorDate__c</columns>
    <columns>Origin__c</columns>
    <columns>RecordId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>