force-app/main/default/objects/ErrorLog__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>ErrorDate__c</columns>
    <columns>ShortMessage__c</columns>
    <columns>LongMessage__c</columns>
    <columns>Origin__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>